--- a/estilos/_contacto.scss
+++ b/estilos/_contacto.scss
@@ -1,3 +1,5 @@
+@import "mediaQuery";
+
 .tituloContaco {
     font-size: $f-size;
     text-align: center;
@@ -19,11 +21,16 @@
          background: $gradient;
     }
 
+    &__input:focus {
+           color: white;
+    }
+
     &__textarea {
             background: $gradient;
     }
 
-    &__btn {       
+    &__btn {   
+         padding: 5px 35px;    
          transition: all 0.5s ease-out;
          @include movil {
             margin-top: ($margin/2)-10;
