--- a/estilos/main.css
+++ b/estilos/main.css
@@ -315,12 +315,17 @@ a {
   background: linear-gradient(to bottom, #232526, #414345);
 }
 
+.contacto__input:focus {
+  color: white;
+}
+
 .contacto__textarea {
   background: -webkit-gradient(linear, left top, left bottom, from(#232526), to(#414345));
   background: linear-gradient(to bottom, #232526, #414345);
 }
 
 .contacto__btn {
+  padding: 5px 35px;
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
 }
