--- a/views/faq.html
+++ b/views/faq.html
@@ -43,8 +43,8 @@
              <ul class="navbar-nav align-items-center">
                <li class="nav-item"><a class="nav-link" href="./quehacemos.html">Que Hacemos</a></li>
                <li class="nav-item"><a class="nav-link" href="./productos.html">Productos</a></li>
-               <li class="nav-item"><a class="nav-link" href="./faq.html">FAQ</a></li>
-               <li class="nav-item"><a class="nav-link active"  href="#">Contacto</a></li>
+               <li class="nav-item"><a class="nav-link active" href="#">FAQ</a></li>
+               <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
            </ul> 
  
            </div>
@@ -58,38 +58,48 @@
        
 <main>
 
-  <h1 class="tituloContaco tilt-in-right-2">Contacto</h1>
-    
-   <div class="container contacto">
-         <form class="row d-flex col-md-6" action="#" method="POST">
-           <div class="col-12">
-             <label for="inputName" class="form-label">Nombre</label>
-             <input type="text" class="form-control contacto__input" id="inputName" placeholder="Deje su nombre aqui" required>
-           </div>
-           <div class="col-12">
-             <label for="inputmail" class="form-label">Email</label>
-             <input type="text" class="form-control contacto__input" id="inputmail" placeholder="Deje su email aqui" required>
-           </div>
-           <div class="col-12">
-             <label for="inputAddress2" class="form-label">Comentario</label>
-             <textarea type="text" class="form-control contacto__textarea" id="inputAddress2" placeholder="Deje su comentario aqui" required></textarea>
-           </div>
-           <div class="col-12 text-center">
-             <button type="submit" class="contacto__btn btn-dark">Enviar</button>
-           </div>
-         </form>
-       
-    
-        <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.84595260084!2d-58.49001818505306!3d-34.58276423076958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb64225d5d543%3A0x7ec667ce3c412947!2sEcheverr%C3%ADa%20%26%20Burela%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1625579763973!5m2!1ses!2sar"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    
-   </div>
+  <h1 class="tituloFaq tilt-in-right-2">Preguntas frecuentes</h1>
 
+  <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          ¿De que material están hechas las velas?
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+            <p>Nuestras velas están hechas a mano con cera de soja y son 100% naturales y ecológicas.</p>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            ¿Hacen envíos?
+        </button>
+      </h2>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+            <p>hacemos envíos a todo el pais.</p>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingThree">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            ¿Cuáles son los métodos de pago?
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+            <p>Aceptamos efectivo, transferencia bancaria y tarjetas de crédito.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-   
-      
-</main>
 <hr>
-
 <footer>    
 
     <div class="container-fluid footer ">
