--- a/estilos/_productos.scss
+++ b/estilos/_productos.scss
@@ -15,5 +15,13 @@
          height:$height/2;
          width:$width/2;
          margin: $margin/2;
+         transition: all 2s;
+    }
+
+    &__img:hover {
+          width: 450px;
+          height: 450px; 
+          padding: 15px;
+          background-image: $gradient;
     }
 }
