--- a/estilos/_contacto.scss
+++ b/estilos/_contacto.scss
@@ -6,6 +6,14 @@
     padding-bottom:($padding)-20;
     margin-top: 15px;
     color:grey;
+    @include movil-s {
+        padding: 0;
+        font-size: 40px;
+    }
+    @include movil-m {
+        font-size: 35px;
+        padding: 0;
+    }
 }
 
 .contacto {
@@ -15,6 +23,10 @@
     margin-bottom: ($margin/2)+5;
     @include movil {
         flex-direction: column;
+    }
+    @include movil-s {
+        margin-top: 25px;
+        margin-bottom: 15px;
     }
 
     &__input {
@@ -51,5 +63,9 @@ iframe {
         height: 300px;
         align-self: center;
         margin: 25px 0 0 0;
+    }
+    @include movil-s {
+        width: 250px;
+        height: 250px;
     }
 }
