--- a/estilos/_index.scss
+++ b/estilos/_index.scss
@@ -5,12 +5,24 @@
     text-align: center;
     margin-top: 15px;
     color:grey;
+    @include movil-s {
+        font-size: 35px;
+    }
+    @include movil-m {
+        font-size: 40px;
+    }
 }
 
 .carousel {
     display: grid;
     justify-content: center;
     margin: ($margin/2)+5;
+    @include movil-s {
+        margin: 25px 50px;
+    }
+    @include movil-m {
+        margin: 25px 65px;
+    }
 
     &__img {
          max-height:($height)-100;
@@ -21,6 +33,12 @@
 .nuestrasVelas {
     margin-bottom: $margin;
     margin-top: ($margin)+25;
+    @include movil-s {
+        margin-bottom:0 ;
+    }
+    @include movil-m {
+        margin-bottom: 0;
+    }
 
     &__servicios {
         display: flex;
@@ -44,6 +62,14 @@
             color: white;
             padding: $padding;
             text-align: center;
+            @include movil-s {
+                padding: 0 30px;
+                margin-top: 25px;
+            }
+            @include movil-m {
+                padding: 40px;
+                margin-top: 25px;
+            }
     } 
 }
 
@@ -71,5 +97,11 @@
            padding: $padding;
            text-align: center;
            margin-top: ($margin/2)+10;
+           @include movil-s {
+               padding: 0 35px;
+           }
+           @include movil-m {
+               padding: 0 35px;
+           }
     }
 }
