--- a/estilos/_queHacemos.scss
+++ b/estilos/_queHacemos.scss
@@ -5,11 +5,21 @@
     text-align: center;
     margin-top: 15px;
     color: grey;
+    @include movil-s {
+        font-size: 35px;
+    }
+    @include movil-m {
+        font-size: 40px;
+    }
 
     &__parrafo {
           text-align: center;
           list-style-type: none;
           margin: 40px 0;
+          @include movil-m {
+              margin: 40px 10px;
+              padding: 0;
+          }
     }
 }
 
@@ -22,6 +32,14 @@
          width:$width/2;
          @include tablet {
             margin: ($margin/2)-15;
+         }
+         @include movil-s {
+             width: 250px;
+             height: 200px;
+         }
+         @include movil-m {
+             width: 250px;
+             height: 250px;
          }
     }
 }
