--- a/estilos/_productos.scss
+++ b/estilos/_productos.scss
@@ -6,11 +6,8 @@
     padding-bottom:($padding)-20;
     margin-top: 15px;
     color:grey;
-    @include movil-s {
+    @include movil {
         font-size: 35px;
-    }
-    @include movil-m {
-        font-size: 40px;
     }
 }
 
