--- a/views/productos.html
+++ b/views/productos.html
@@ -65,12 +65,12 @@
        <div class="row">
         <div class="productos">
 
-          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela1.jfif" alt="vela1">
-          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela2.jfif" alt="vela2">
-          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela3.jfif" alt="vela3">
-          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela4.jfif" alt="vela4">
-          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela5.jfif" alt="vela5">
-          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela6.jfif" alt="vela6">
+          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela1.jpg" alt="vela1">
+          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela2.jpg" alt="vela2">
+          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela3.jpg" alt="vela3">
+          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela4.jpg" alt="vela4">
+          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela5.jpg" alt="vela5">
+          <img class="productos__img tilt-in-right-2 img-fluid" src="../img/vela6.jpg" alt="vela6">
      
         </div>  
       </div>
